# bayesian-mmm

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: daily_prediction.yml
data/synthetic/: simulation_state.json  true_params.json  weekly_mmm.csv
notebooks/: bayesian_mmm_220526.ipynb
scripts/: generate_synthetic.py  run_pipeline_test.py
src/: __init__.py  database.py  mmm_model_predict.py  mmm_model_prior.py  mmm_model_train.py  mmm_roas.py  out_sample_predict.py  processor.py  streamlit_app.py
src/bayesian_mmm/: __init__.py  config.py
src/bayesian_mmm/data/: __init__.py  daily.py  state.py  supabase_io.py  synthetic.py  weekly_aggregate.py
src/bayesian_mmm/transforms/: __init__.py  adstock.py  saturation.py
tests/: conftest.py  test_database.py  test_mmm_model_predict.py  test_mmm_model_prior.py  test_mmm_model_train.py  test_mmm_roas.py  test_out_sample_predict.py  test_processor.py
