[project]
name = "bayesian-mmm"
version = "0.1.0"
description = "use bayesian mmm to measure the attribution of media channels and reallocate spend to maximise ROI"
authors = [
    {name = "Jessie",email = "ipngasi@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.5,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "datetime (>=6.0,<7.0)",
    "pymc (>=6.0.0,<7.0.0)",
    "arviz (>=1.1.0,<2.0.0)",
    "supabase (>=2.30.0,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook (>=7.5.6,<8.0.0)"
]
