[project]
name = "bayesian-mmm"
version = "0.1.0"
description = "use bayesian mmm to measure the attribution of media channels and reallocate spend to maximise ROI"
authors = [
    {name = "Jessie",email = "ipngasi@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=1.26.0,<3.0.0)",
    "pandas (>=2.0.0,<4.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "datetime (>=6.0,<7.0)",
    "supabase (>=2.30.0,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",

    "pymc (>=5.10.0,<6.0.0)",
    "arviz (>=0.16.0,<1.0.0)",
    "pymc-marketing (>=0.19.0,<0.20.0)",
    "graphviz (>=0.21,<0.22)",
    "jax (>=0.10.1,<0.11.0)",
    "jaxlib (>=0.10.1,<0.11.0)",
    "numpyro (>=0.21.0,<0.22.0)",
    "axes (>=0.0.1,<0.0.2)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook (>=7.5.6,<8.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pandas-stubs (>=3.0.3.260530,<4.0.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: real PyMC prior predictive (optional, not for CI)",
]
